--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
-    "express": "^4.15.4"
+    "body-parser": "^1.18.3",
+    "express": "^4.15.4",
+    "mongoose": "^5.4.2",
+    "path": "^0.12.7"
   }
 }
